# AdventOfCode_23-WIP-

./: .gitmodules  CMakeLists.txt
day_01/: CMakeLists.txt
day_01/inc/: d01.h
day_01/src/: d01p1.c  d01p2.c  main.c
day_01/test/: CMakeLists.txt  test_d01p1.c  test_d01p2.c
day_02/: CMakeLists.txt
day_02/inc/: d02.h
day_02/src/: d02p1.c  d02p2.c  main.c
day_02/test/: CMakeLists.txt  test_d02p1.c  test_d02p2.c
day_03/: CMakeLists.txt
day_03/inc/: d03.h
day_03/src/: d03p1.c  d03p2.c  main.c
day_03/test/: CMakeLists.txt  test_d03p1.c  test_d03p2.c
day_04/: CMakeLists.txt
day_04/inc/: d04.h
day_04/src/: d04p1.c  d04p2.c  main.c
day_04/test/: CMakeLists.txt  test_d04p1.c  test_d04p2.c
day_05/: CMakeLists.txt
day_05/inc/: d05.h
day_05/src/: d05p1.c  d05p2.c  main.c
day_05/test/: CMakeLists.txt  test_d05p1.c  test_d05p2.c
day_06/: CMakeLists.txt
day_06/inc/: d06.h
day_06/src/: d06p1.c  d06p2.c  main.c
day_06/test/: CMakeLists.txt  test_d06p1.c  test_d06p2.c
lib/Vector/: vector.c
